--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,11 @@ version: '3.7'
 
 services:
   chatbot:
-    image: ghcr.io/yguy/chatgpt-mattermost-bot:latest
+    #image: ghcr.io/yguy/chatgpt-mattermost-bot:latest
     build: .
     restart: unless-stopped
     environment:
-      MATTERMOST_URL: https://mattermost.server
-      MATTERMOST_TOKEN: abababacdcdcd
+      MATTERMOST_URL: http://10.0.0.211:8065
+      MATTERMOST_TOKEN: obgxpfkguj85fp97k87wm6mfrc
+      MATTERMOST_BOTNAME: "@test_bot"
       OPENAI_API_KEY: sk-234234234234234234
